[package]
name = "sandy-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
solana-sdk = "2.0.7"
anyhow = "1.0.86"
bs58 = "0.5.1"
solana-client = "2.0.8"
borsh = "1.5.1"
rand = "0.8.5"
bincode = "1.3.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.128"
tokio-tungstenite = "0.24.0"
serde = "1.0.210"
futures-util = "0.3.30"
