[package]
name = "sandy-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
solana-program = "2.0.7"
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }

[lib]
name = "sandy_program"
crate-type = ["cdylib"]
